# commissary-tauri

./: README.md  package.json  update.json  vite.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  config.ini  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/components/: comments.rs  config.rs  images.rs  ini_parse.rs  minio.rs  mod.rs  native.rs  pay.rs  product.rs  qq_robot.rs
src/components/: Carousel.vue  ShopForm.vue
src/router/: index.js
src/views/: History.vue  Login.vue  Main.vue  Product.vue  Qrcode.vue  ShoppingList.vue
