[package]
name = "commissary-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "devtools", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "*"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
rust-ini = "0.18"
reqwest = { version = "0.11", features = ['json'] }
regex = "1.5.4"
rust-s3 = { version = "0.32", feature = 'with-tokio' }
tokio = { version = "1", features = ["full"] }
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[dependencies.mysql_common]
features = ["chrono"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
